# LocalDeploy

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAPS.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  PUBLIC_LAUNCH_PLAN.md  README.md  SECURITY.md  api_server.py  benchmark.py  chat_cli.py  compare_models.py  config.example.json  docker-compose.yml  install.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.ps1  run.sh  start.bat  start.command  test_models.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-macos.yml  ci.yml  publish-container.yml  publish.yml
docs/: API_OPTIONS.md  CLI.md  GITHUB_SETUP.md  MODELS.md  PACKAGING.md  RELEASING.md  ROADMAP.md  SCREENSHOTS.md  TERMINAL_TESTING.md  UI.md  VERIFICATION.md  YBM_INTEGRATION.md
examples/: README.md  curl_chat.sh  python_client.py  vision_chat.ps1  ybm.localdeploy.config.snippet.yaml
localdeploy/: __init__.py  benchmark.py  chat_cli.py  cli.py  compare_models.py  grader_sandbox.py  server.py  utils.py
localdeploy/backends/: ollama.py  (+2 more)
packaging/: build.ps1  localdeploy.spec  macos.spec  tray_app.py
reports/: evaluation_2026-05-17.md  ollama_models_2026-05-17.json  ybm_compatibility_2026-05-17.json  ybm_provider_actual_2026-05-17.json
scripts/: capture_demo_gif.py  capture_screenshots.py  chat.ps1  docker-entrypoint.sh  egress_selftest.py  install.ps1  smoke_test.ps1  start.ps1  start.sh  start_llamacpp.ps1  start_ui.ps1  stop.ps1  stop.sh
tests/: README.md  conftest.py  test_api_routes.py  test_audit_fixes.py  test_bakeoff.py  test_bench_history.py  test_benchmark_expansion.py  test_benchmark_graders.py  test_benchmark_provenance.py  test_benchmark_registry.py  test_benchmark_runner.py  test_calibration.py  test_community.py  test_compare_models_cli.py  test_device_target.py  test_documentation.py  test_fit_tiers.py  test_fit_v2.py  test_gpu_inventory.py  test_grader_sandbox.py  test_guardrails.py  test_hardware_cpu_ram.py  test_lan_exposure.py  test_manifest.py  test_model_management.py  test_modelscope_and_gguf_import.py  test_monitor.py  test_ollama_library_search.py  test_openai_extensions.py  test_packaging.py  test_phase5_phase6.py  test_phase_b_report.py  test_profiles_crud.py  test_quant_advisor.py  test_recommend_guided.py  test_security.py  test_starter_pack.py  test_structured_outputs.py  test_ui_playwright.py  test_updates.py  (+8 more)
web/: app.js  index.html  styles.css
(+43 files in other folders)
